--- a/etc/bgpcd.conf
+++ b/etc/bgpcd.conf
@@ -1,5 +1,8 @@
-whois_host = whois.ripe.net
-prefix = nets
+[main]
+whost = whois.ripe.net
 tplpath = /usr/share/bgpcd/templates
+
+[preflist]
+prefix = nets
 
 [preflist-names]
